# shooting-analyser

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  SETUP.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src/core/: index.ts
src/core/parser/: scatt-pdf.ts
src/core/report/: generate.ts
src/core/stats/: correlations.ts  decision.ts  describe.ts  grouping.ts  regression.ts  runtime.ts  tests.ts
src/shells/: detect.ts  pdf-worker.ts  tauri.ts  types.ts  web.ts
src/ui/: App.css  App.tsx  Conclusion.tsx  Correlations.tsx  ExplainResult.tsx  Stats.tsx
tests/: report.test.ts  scatt-pdf.test.ts  shells.test.ts
